--- a/lab04/MyApplication/app/src/main/res/layout/activity_main.xml
+++ b/lab04/MyApplication/app/src/main/res/layout/activity_main.xml
@@ -10,8 +10,27 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.ubun17.myapplication.MainActivity">
 
-    <TextView
+    <EditText
+        android:id="@+id/searchEdit"
+        android:hint="Type the search term"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+    <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"/>
+        android:id="@+id/listView"
+        android:layout_below="@+id/searchEdit"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="116dp"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Click to Search"
+        android:id="@+id/button"
+        android:layout_below="@+id/searchEdit"
+        android:layout_centerHorizontal="true"/>
+
 </RelativeLayout>
